--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/ProximaNova-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/ProximaNova-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
 * {
+  font-family: "Proxima Nova";
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -13,7 +28,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   background-color: white;
-  color: black;
+  color: #212529;
 }
 
 body {
